--- a/movie_annotation/style.css
+++ b/movie_annotation/style.css
@@ -1,3 +1,5 @@
+/* style.css */
+
 body {
 	background-color: black;
 }
@@ -7,7 +9,7 @@ h1 {
 	text-align: center;
 	font-family: sans-serif;
 	font-size: 40px;
-	color: #426820;
+	color: #7fc442;
 }
 
 #movie_quotes {
