--- a/captainslog/style.css
+++ b/captainslog/style.css
@@ -1,6 +1,6 @@
 h1 {
 	font-family: 'IM Fell English SC', serif;
-	font-size: 72px;
+	font-size: 84px;
 	color: #444444;
 }
 
@@ -18,6 +18,7 @@ body {
 	background-color: #c1a881;
 	font-family: 'Nothing You Could Do', cursive;
 	font-size: 24px;
+	color: #000050;
 }
 
 #log {
